--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -9,7 +9,8 @@
 
 .settingsIcon {
   position: sticky;
-  top: calc(var(--tg-safe-area-inset-top) + var(--tg-safe-area-inset-top) / 2);
+  //top: calc(var(--tg-safe-area-inset-top));
+  top: calc(var(--tg-safe-area-inset-top) + var(--tg-content-safe-area-inset-top) / 2);
   right: calc(var(--tg-safe-area-inset-right) + 90px);
 }
 
